# pixiv-downloader

./: .env.example  .gitignore  Readme.md  Taskfile.yml  api.py  db.py  downloader.py  main.py  pyproject.toml  utils.py
models/: api.py  api_query.py  db.py
